--- a/assignment1/Assignment1_VC.ipynb
+++ b/assignment1/Assignment1_VC.ipynb
@@ -475,7 +475,7 @@
     "    plt.subplot(1,2,2)\n",
     "    plt.axis('off')\n",
     "    plt.imshow(dst)\n",
-    "    plt.title(\"Result\")\n",
+    "    plt.title(\"Undistorted\")\n",
     "    plt.show()"
    ]
   }
