--- a/assignment1/Assignment1_VC.ipynb
+++ b/assignment1/Assignment1_VC.ipynb
@@ -1017,18 +1017,18 @@
     "\n",
     "# Define the ranges of hue values for each color\n",
     "hue_ranges = {\n",
-    "    'yellow': [(20, 40)],\n",
-    "    'green': [(60, 90)],\n",
+    "    'yellow': [(30, 60)],\n",
+    "    'green': [(90, 130)],\n",
     "    'red': [(0, 15),(240,255)],\n",
-    "    'blue': [(95, 110)],\n",
+    "    'blue': [(130, 160)],\n",
     "    'brown': [(10, 20)]\n",
     "}\n",
     "# Define the ranges of hue values for each color\n",
     "sat_ranges = {\n",
-    "    'yellow': [(45, 255)],\n",
-    "    'green': [(70,255)],\n",
-    "    'red': [(125, 255)],\n",
-    "    'blue': [(180, 255)],\n",
+    "    'yellow': [(50, 255)],\n",
+    "    'green': [(70,255)], # value between 0 and 230\n",
+    "    'red': [(120, 255)],\n",
+    "    'blue': [(200, 255)],\n",
     "    'brown': [(125, 255)]\n",
     "}\n",
     "\n",
