--- a/assignment1/deliverable.ipynb
+++ b/assignment1/deliverable.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "    output = cv.rectangle(img, (left, top), (right, bottom), (0,255,0), 1)\n",
     "    \n",
-    "    if (outtype == 'plot'): \n",
+    "    if (outtype == 'plot' or outtype == 'all'): \n",
     "        plt.figure(figsize=(50,50))\n",
     "        plt.subplot(131)\n",
     "        plt.title(\"img cut\")\n",
