--- a/assignment1/deliverable.ipynb
+++ b/assignment1/deliverable.ipynb
@@ -162,10 +162,10 @@
     "[Extrinsic](https://stackoverflow.com/questions/55220229/extrinsic-matrix-computation-with-opencv)\n",
     "[Size of Squares](https://stackoverflow.com/questions/37310210/camera-calibration-with-opencv-how-to-adjust-chessboard-square-size)\n",
     "\n",
-    "# Scaling\n",
+    "# Answer to c) III. ii. and IV. ii.\n",
     "This implementation relies on scaling the object point matriz so that it represent the actual size of the printed checkboard. \n",
     "\n",
-    "Another possible implementation, would envolve calculating the average pixel distace between the corners and divide that by the size of the squares giving us a average pixel to lenght unit ratio (this would be a lot more ??suscetipble?? to radial distortion and off focus plane objects)"
+    "Another possible implementation, would envolve calculating the average pixel distace between the corners and divide that by the size of the squares giving us a average pixel to lenght unit ratio (this would be a lot more susceptible to radial distortion and off focus plane objects)"
    ]
   },
   {
