data set importer v2 in python

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Horn-Shunchk (?)"
+    "# Horn-Shunchk"
    ]
   },
   {
@@ -394,6 +395,54 @@
     "    \n",
     "    return curr_flow, magnitude, angle\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bench Marking\n",
+    "\n",
+    "## Average angular error (AAE) and standard deviation\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMport dataset with public ground truth\n",
+    "\n",
+    "import os\n",
+    "import subprocess\n",
+    "import wget\n",
+    "import zipfile\n",
+    "\n",
+    "# Specify the URLs of the files to download\n",
+    "url1 = \"https://vision.middlebury.edu/flow/data/comp/zip/other-gt-flow.zip\"\n",
+    "url2 = \"https://vision.middlebury.edu/flow/data/comp/zip/other-color-allframes.zip\"\n",
+    "\n",
+    "# Specify the destination folder to store the downloaded files\n",
+    "destination_folder = \"dataset/\"\n",
+    "\n",
+    "# Download the files using wget\n",
+    "file1 = wget.download(url1, out=destination_folder)\n",
+    "file2 = wget.download(url2, out=destination_folder)\n",
+    "\n",
+    "# Unzip the files\n",
+    "with zipfile.ZipFile(file1, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(destination_folder)\n",
+    "\n",
+    "with zipfile.ZipFile(file2, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(destination_folder)\n",
+    "\n",
+    "# Remove the zip files if needed\n",
+    "os.remove(file1)\n",
+    "os.remove(file2)"
    ]
   }
  ],
