--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,13 @@
     "    with open(filename, 'wb') as f:\n",
     "        f.write(struct.pack('f', width))\n",
     "        f.write(struct.pack('f', height))\n",
-    "        f.write(flow.astype(np.float32).tobytes())"
+    "        f.write(flow.astype(np.float32).tobytes())\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +133,15 @@
     "    flow = flow.reshape(int(height), int(width), 2)\n",
     "\n",
     "    return flow\n",
+    "\n",
+    "\n",
+    "def compute_angular_error(flow_gt, flow_est):\n",
+    "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
+    "    angles_est = np.arctan2(flow_est[:, :, 1], flow_est[:, :, 0])\n",
+    "    error = (np.sum((angles_gt - angles_est) ** 2, axis=2))\n",
+    "    return np.mean(error)\n",
+    "\n",
+    "\n",
     "\n",
     "def compute_endpoint_error(flow_gt, flow_est):\n",
     "    error = np.sqrt(np.sum((flow_gt - flow_est) ** 2, axis=2))\n",
@@ -502,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
