added angular to error calc

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,9 +151,10 @@
     "    flow_gt = read_flow(file_gt)\n",
     "    flow_est = read_flow(file_est)\n",
     "\n",
-    "    error = compute_endpoint_error(flow_gt, flow_est)\n",
+    "    error_endpoint = compute_endpoint_error(flow_gt, flow_est)\n",
+    "    error_angular = compute_angular_error(flow_gt, flow_est)\n",
     "\n",
-    "    return error"
+    "    return error_endpoint, error_angular"
    ]
   },
   {
