added framte path porinting

--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -88,6 +88,7 @@
     "def get_input_frames(input_path):\n",
     "    if os.path.isdir(input_path):\n",
     "        frame_paths = get_frame_paths(input_path)\n",
+    "        print(f\"{frame_paths}\")\n",
     "        frames = [cv2.imread(frame_path) for frame_path in frame_paths]\n",
     "    else :\n",
     "        if input_path.endswith('.mp4'):\n",
