--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -254,200 +254,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Load the tuning parameters from the config file\n",
-    "with open('config_HS.yml', 'r') as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "\n",
-    "# Load the input frames\n",
-    "input_frames = get_input_frames(config['input_path'])\n",
-    "\n",
-    "# Initialize the flow field for the first frame with zeros\n",
-    "prev_frame = input_frames[0]\n",
-    "flow = np.zeros((prev_frame.shape[0], prev_frame.shape[1], 2), dtype=np.float32)\n",
-    "\n",
-    "# Set the Horn-Schunck parameters\n",
-    "alpha = config['alpha']\n",
-    "num_iterations = config['num_iterations']\n",
-    "epsilon = config['epsilon']\n",
-    "\n",
-    "# Define the Gaussian pyramid levels\n",
-    "num_levels = config['num_levels']\n",
-    "pyramid_scale = config['pyramid_scale']\n",
-    "\n",
-    "# Compute the optical flow for each level of the pyramid\n",
-    "for level in range(num_levels):\n",
-    "    # Downsample the input frames and flow field\n",
-    "    curr_frame = cv2.resize(prev_frame, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "    curr_flow = cv2.resize(flow, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "\n",
-    "    # Compute the optical flow using the multi-channel Horn-Schunck algorithm\n",
-    "    for i in range(num_iterations):\n",
-    "        # Compute the gradient of the flow field\n",
-    "        fx, fy = np.split(curr_flow, 2, axis=2)\n",
-    "        \n",
-    "        # Compute the Laplacian of the flow field\n",
-    "        fxx, _ = np.gradient(fx)\n",
-    "        _, fyy = np.gradient(fy)\n",
-    "        \n",
-    "        # Compute the divergence of the flow field\n",
-    "        divergence = fxx + fyy\n",
-    "        \n",
-    "        # Compute the temporal derivative of the input frames\n",
-    "        dt = (curr_frame - prev_frame) / 255.0\n",
-    "        \n",
-    "        # Compute the update for the flow field\n",
-    "        update = np.zeros_like(curr_flow)\n",
-    "        for channel in range(curr_flow.shape[2]):\n",
-    "            update[:, :, channel] = (-divergence[:, :, channel] + \n",
-    "                                     alpha * fx[:, :, channel] * dt**2 + \n",
-    "                                     alpha * fy[:, :, channel] * dt**2) / \n",
-    "                                     (fxx[:, :, channel] + fyy[:, :, channel] + epsilon)\n",
-    "        \n",
-    "        # Apply the update to the flow field\n",
-    "        curr_flow += update\n",
-    "        \n",
-    "    # Refine the flow field using the coarse-to-fine strategy\n",
-    "    if level > 0:\n",
-    "        curr_flow = cv2.resize(prev_flow, curr_flow.shape[::-1]) * 2 + curr_flow\n",
-    "        \n",
-    "    # Upsample the flow field to the next level of the pyramid\n",
-    "    prev_flow = curr_flow\n",
-    "    prev_frame = curr_frame\n",
-    "\n",
-    "# Display the final flow field using Matplotlib\n",
-    "fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "flow_visualization = flow_to_color(prev_flow)\n",
-    "ax.imshow(flow_visualization)\n",
-    "ax.set_axis_off()\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import yaml\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import clear_output\n",
-    "from ipywidgets import Image\n",
-    "from io import BytesIO\n",
-    "import PIL.Image\n",
-    "\n",
-    "def get_input_frames(input_path):\n",
-    "    if os.path.isdir(input_path):\n",
-    "        frame_paths = get_frame_paths(input_path)\n",
-    "        frames = [cv2.imread(frame_path) for frame_path in frame_paths]\n",
-    "    else :\n",
-    "        if input_path.endswith('.mp4'):\n",
-    "            cap = cv2.VideoCapture(input_path)\n",
-    "            frames = []\n",
-    "            while True:\n",
-    "                ret, frame = cap.read()\n",
-    "                if not ret:\n",
-    "                    break\n",
-    "                frames.append(frame)\n",
-    "            cap.release()\n",
-    "    return frames\n",
-    "\n",
-    "def display_image(image):\n",
-    "    # Convert the OpenCV image to a PIL image\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    pil_image = PIL.Image.fromarray(image)\n",
-    "    \n",
-    "    # Display the image using the Jupyter inline magic\n",
-    "    buffered = BytesIO()\n",
-    "    pil_image.save(buffered, format=\"JPEG\")\n",
-    "    display(Image(data=buffered.getvalue()))\n",
-    "    \n",
-    "\n",
-    "def flow_to_color(flow, max_flow=None):\n",
-    "    \"\"\"\n",
-    "    Convert optical flow to RGB image using the Middlebury color code.\n",
-    "    \"\"\"\n",
-    "    assert flow.ndim == 3 and flow.shape[2] == 2, \"input flow must have shape (H, W, 2)\"\n",
-    "    if max_flow is None:\n",
-    "        max_flow = np.max(np.abs(flow))\n",
-    "    \n",
-    "    eps = 1e-5\n",
-    "    unknown_mask = np.logical_or(np.isnan(flow[..., 0]), np.isnan(flow[..., 1]))\n",
-    "    flow = flow / (max_flow + eps)\n",
-    "    flow[..., 0] = 0.5 + flow[..., 0] / 2\n",
-    "    flow[..., 1] = 0.5 - flow[..., 1] / 2\n",
-    "    flow[..., 1] *= -1\n",
-    "    flow[unknown_mask, :] = 0\n",
-    "    \n",
-    "    return (255 * flow).astype(np.uint8)\n",
-    "\n",
-    "# Load the tuning parameters from the config file\n",
-    "with open('config.yml', 'r') as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "\n",
-    "# Load the input frames\n",
-    "input_frames = get_input_frames(config['input'])\n",
-    "\n",
-    "# Initialize the flow field for the first frame with zeros\n",
-    "prev_frame = input_frames[0]\n",
-    "flow = np.zeros((prev_frame.shape[0], prev_frame.shape[1], 2), dtype=np.float32)\n",
-    "\n",
-    "# Set the Horn-Schunck parameters\n",
-    "alpha = config['alpha']\n",
-    "num_iterations = config['num_iterations']\n",
-    "epsilon = config['epsilon']\n",
-    "\n",
-    "# Define the Gaussian pyramid levels\n",
-    "num_levels = config['num_levels']\n",
-    "pyramid_scale = config['pyramid_scale']\n",
-    "\n",
-    "# Create an output widget for displaying images\n",
-    "output_widget = Image()\n",
-    "\n",
-    "# Compute the optical flow for each level of the pyramid\n",
-    "for level in range(num_levels):\n",
-    "    # Downsample the input frames and flow field\n",
-    "    curr_frame = cv2.resize(prev_frame, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "    curr_flow = cv2.resize(flow, None, fx=pyramid_scale, fy=pyramid_scale)\n",
-    "\n",
-    "    # Compute the optical flow using the multi-channel Horn-Schunck algorithm\n",
-    "    for i in range(num_iterations):\n",
-    "        # Compute the gradient of the flow field\n",
-    "        fx, fy = np.split(curr_flow, 2, axis=2)\n",
-    "        \n",
-    "        # Compute the Laplacian of the flow field\n",
-    "        fxx, _ = np.gradient(fx)\n",
-    "        _, fyy = np.gradient(fy)\n",
-    "        fxy = np.gradient(fx, axis=0)[0] + np.gradient(fy, axis=1)[1]\n",
-    "        \n",
-    "        # Compute the temporal derivative of the flow field\n",
-    "        ft = next_frame_gray - prev_frame_gray + np.sum(curr_flow * np.dstack((fx, fy)), axis=2)\n",
-    "        \n",
-    "        # Compute the update to the flow field\n",
-    "        numerator = fxx * fy ** 2 - 2 * fx * fy * fxy + fyy * fx ** 2 - ft * fx * fy\n",
-    "        denominator = fx ** 2 + fy ** 2 + alpha\n",
-    "        update = numerator / denominator[..., np.newaxis]\n",
-    "        \n",
-    "        # Update the flow field\n",
-    "        curr_flow += update\n",
-    "        \n",
-    "        # Visualize the current flow field\n",
-    "        if display:\n",
-    "            fig, ax = plt.subplots()\n",
-    "            ax.imshow(prev_frame_gray, cmap='gray')\n",
-    "            ax.quiver(x, y, curr_flow[..., 0], curr_flow[..., 1], color='red', angles='xy')\n",
-    "            ax.set_title('Iteration {}'.format(i + 1))\n",
-    "            plt.show()\n",
-    "        \n",
-    "    # Convert the flow field to polar coordinates\n",
-    "    magnitude, angle = cv2.cartToPolar(curr_flow[..., 0], curr_flow[..., 1], angleInDegrees=True)\n",
-    "    \n",
-    "    return curr_flow, magnitude, angle\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "attachments": {},
@@ -456,9 +263,7 @@
    "source": [
     "# Bench Marking\n",
     "\n",
-    "## Average angular error (AAE) and standard deviation\n",
-    "\n",
-    "\n"
+    "## Import Dataset"
    ]
   },
   {
