--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -32,6 +32,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scheme\n",
+    "```mermaid\n",
+    "flowchart LR\n",
+    "    A[Ingest Footage] -->|mp4 or mpegs| B{Multi Channel?}\n",
+    "    B -->|Yes| C[Split into Channels]\n",
+    "    B -->|No| D[Gray]-->H\n",
+    "    C --> E[R]-->H\n",
+    "    C --> F[G]-->H\n",
+    "    C --> G[B]-->H\n",
+    "    H{Multi Resolution?}-->|Yes|I[n Pyramid DownSampling Average]-->K\n",
+    "    H-->|No|J[One Shot]-->K\n",
+    "    K{algo} -->|HornShunck| M((FLOW))\n",
+    "    K -->|LucasKanade| M\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
