--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Checks if the inut file is a directory and if it is it will try and get the frames inside the folder\n",
     "# it will check if it is and mp4 and if it is it will read it and create a list of frames\n",
     "def get_input_frames(input_path):\n",
+    "    if not os.path.isdir(input_path):\n",
+    "        raise ValueError(\"Invalid directory: {}\".format(input_path))\n",
     "    if os.path.isdir(input_path):\n",
     "        frame_paths = get_frame_paths(input_path)\n",
     "        print(f\"{frame_paths}\")\n",
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +277,106 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import yaml\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output\n",
+    "from ipywidgets import Image\n",
+    "from io import BytesIO\n",
+    "import PIL.Image\n",
+    "\n",
+    "def display_image(image):\n",
+    "    # Convert the OpenCV image to a PIL image\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    pil_image = PIL.Image.fromarray(image)\n",
+    "    \n",
+    "    # Display the image using the Jupyter inline magic\n",
+    "    buffered = BytesIO()\n",
+    "    pil_image.save(buffered, format=\"JPEG\")\n",
+    "    display(Image(data=buffered.getvalue()))\n",
+    "\n",
+    "def flow_to_color(flow, max_flow=None):\n",
+    "    \"\"\"\n",
+    "    Convert optical flow to RGB image using the Middlebury color code.\n",
+    "    \"\"\"\n",
+    "    assert flow.ndim == 3 and flow.shape[2] == 2, \"input flow must have shape (H, W, 2)\"\n",
+    "    if max_flow is None:\n",
+    "        max_flow = np.max(np.abs(flow))\n",
+    "    \n",
+    "    eps = 1e-5\n",
+    "    unknown_mask = np.logical_or(np.isnan(flow[..., 0]), np.isnan(flow[..., 1]))\n",
+    "    flow = flow / (max_flow + eps)\n",
+    "    flow[..., 0] = 0.5 + flow[..., 0] / 2\n",
+    "    flow[..., 1] = 0.5 - flow[..., 1] / 2\n",
+    "    flow[..., 1] *= -1\n",
+    "    flow[unknown_mask, :] = 0\n",
+    "    \n",
+    "    return (255 * flow).astype(np.uint8)\n",
+    "\n",
+    "# Load the tuning parameters from the config file\n",
+    "with open('config_HS.yml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "# Load the input frames\n",
+    "input_path = os.getcwd()+config['input_path']\n",
+    "input_frames = get_input_frames(input_path)\n",
+    "\n",
+    "# Initialize the flow field for the first frame with zeros\n",
+    "prev_frame = input_frames[0]\n",
+    "flow = np.zeros((prev_frame.shape[0], prev_frame.shape[1], 2), dtype=np.float32)\n",
+    "\n",
+    "# Set the Horn-Schunck parameters\n",
+    "alpha = config['alpha']\n",
+    "num_iterations = config['num_iterations']\n",
+    "epsilon = config['epsilon']\n",
+    "\n",
+    "# Define the Gaussian pyramid levels\n",
+    "num_levels = config['num_levels']\n",
+    "pyramid_scale = config['pyramid_scale']\n",
+    "\n",
+    "# Create an output widget for displaying images\n",
+    "output_widget = Image()\n",
+    "\n",
+    "# Compute the optical flow for each level of the pyramid\n",
+    "for level in range(num_levels):\n",
+    "    # Downsample the input frames and flow field\n",
+    "    curr_frame = cv2.resize(prev_frame, None, fx=pyramid_scale, fy=pyramid_scale)\n",
+    "    curr_flow = cv2.resize(flow, None, fx=pyramid_scale, fy=pyramid_scale)\n",
+    "\n",
+    "    # Compute the optical flow using the multi-channel Horn-Schunck algorithm\n",
+    "    for i in range(num_iterations):\n",
+    "        # Split the flow field into x and y components\n",
+    "        fx, fy = np.split(curr_flow, 2, axis=2)\n",
+    "\n",
+    "        # Compute the Laplacian of the flow field\n",
+    "        fxx, _ = np.gradient(fx)\n",
+    "        _, fyy = np.gradient(fy)\n",
+    "        fxy = np.gradient(fx, axis=0)[0] + np.gradient(fy, axis=1)[1]\n",
+    "\n",
+    "        # Compute the temporal derivative of the flow field\n",
+    "        ft = next_frame_gray - prev_frame_gray + np.sum(curr_flow * np.dstack((fx, fy)), axis=2)\n",
+    "\n",
+    "        # Compute the update to the flow field\n",
+    "        numerator = fxx * fy ** 2 - 2 * fx * fy * fxy + fyy * fx ** 2 - ft * fx * fy\n",
+    "        denominator = fx ** 2 + fy ** 2 + alpha\n",
+    "        update = numerator / (denominator[..., np.newaxis] + epsilon)\n",
+    "\n",
+    "        # Update the flow field\n",
+    "        curr_flow += update\n",
+    "\n",
+    "        # Visualize the current flow field\n",
+    "        if display:\n",
+    "            flow_image = flow_to_color(curr_flow)\n",
+    "            display_image(flow_image)\n",
+    "\n",
+    "    # Convert the flow field to polar coordinates\n",
+    "    magnitude, angle = cv2.cartToPolar(curr_flow[..., 0], curr_flow[..., 1], angleInDegrees=True)\n",
+    "\n",
+    "    #return curr_flow, magnitude, angle"
+   ]
   },
   {
    "attachments": {},
