--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,13 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display, clear_output\n",
     "import struct\n",
+    "import argparse\n",
     "%matplotlib widget\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import struct\n",
+    "\n",
+    "def save_flow_field(flow, filename):\n",
+    "    height, width, _ = flow.shape\n",
+    "    with open(filename, 'wb') as f:\n",
+    "        # Write the .flo file header\n",
+    "        f.write(struct.pack('f', 1212500304.0))  # Magic number\n",
+    "        f.write(struct.pack('i', width))  # Image width\n",
+    "        f.write(struct.pack('i', height))  # Image height\n",
+    "\n",
+    "        # Write the flow vectors\n",
+    "        f.write(flow.astype(np.float32).tobytes())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,19 +216,7 @@
      "output_type": "stream",
      "text": [
       "Loading File 'config_LK.yml'\n",
-      "c:\\Users\\nmcna\\Desktop\\FEUP\\4oano\\2osemestre\\VC\\assignment2\\dataset\\eval-data\\Army\n",
-      "[]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[73], line 23\u001b[0m\n\u001b[0;32m     11\u001b[0m feature_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[0;32m     12\u001b[0m     maxCorners\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmax_corners\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     13\u001b[0m     qualityLevel\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mquality_level\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     14\u001b[0m     minDistance\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmin_distance\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     15\u001b[0m     blockSize\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mblock_size\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     16\u001b[0m )\n\u001b[0;32m     17\u001b[0m lk_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[0;32m     18\u001b[0m     winSize\u001b[39m=\u001b[39m(config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mwindow_size\u001b[39m\u001b[39m'\u001b[39m]),\n\u001b[0;32m     19\u001b[0m     maxLevel\u001b[39m=\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmax_level\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m     20\u001b[0m     criteria\u001b[39m=\u001b[39m(cv2\u001b[39m.\u001b[39mTERM_CRITERIA_EPS \u001b[39m|\u001b[39m cv2\u001b[39m.\u001b[39mTERM_CRITERIA_COUNT, config[\u001b[39m'\u001b[39m\u001b[39mmax_iterations\u001b[39m\u001b[39m'\u001b[39m], config[\u001b[39m'\u001b[39m\u001b[39mepsilon\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     21\u001b[0m )\n\u001b[1;32m---> 23\u001b[0m prev_frame \u001b[39m=\u001b[39m frames[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m     24\u001b[0m prev_gray \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(prev_frame, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[0;32m     25\u001b[0m prev_corners \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mgoodFeaturesToTrack(prev_gray, mask\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfeature_params)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame14.png']\n"
      ]
     }
    ],
@@ -218,7 +227,6 @@
     "\n",
     "input_path = os.getcwd()+config['input_path']\n",
     "\n",
-    "print(input_path)\n",
     "frames = get_input_frames(input_path)\n",
     "\n",
     "\n",
@@ -233,7 +241,102 @@
     "    maxLevel=config['max_level'],\n",
     "    criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, config['max_iterations'], config['epsilon'])\n",
     ")\n",
+    "#############\n",
+    "color = np.random.randint(0, 255, (100, 3))\n",
+    "old_frame = frames[0]\n",
+    "old_gray = cv2.cvtColor(old_frame, cv2.COLOR_BGR2GRAY)\n",
+    "p0 = cv2.goodFeaturesToTrack(old_gray, mask=None, **feature_params)\n",
     "\n",
+    "mask = np.zeros_like(old_frame)\n",
+    "\n",
+    "for frame_num in frames[1:]:\n",
+    "    \n",
+    "    current_frame = frame_num\n",
+    "    frame_gray = cv2.cvtColor(frame_num, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    p1, st, err = cv2.calcOpticalFlowPyrLK(old_gray, frame_gray, p0, None, **lk_params)\n",
+    "    \n",
+    "    if p1 is not None:\n",
+    "        good_new = p1[st==1]\n",
+    "        good_old = p0[st==1]\n",
+    "    \n",
+    "    for i, (new, old) in enumerate(zip(good_new, good_old)):\n",
+    "        a, b = new.ravel()\n",
+    "        c, d = old.ravel()\n",
+    "        mask = cv2.line(mask, (int(a), int(b)), (int(c), int(d)), color[i].tolist(), 2)\n",
+    "        \n",
+    "    frame_with_flow = cv2.add(current_frame, mask)\n",
+    "    #cv2.imshow('frame', frame_with_flow)\n",
+    "    #cv2.waitKey(0)\n",
+    "    old_gray = frame_gray.copy()\n",
+    "    p0 = good_new.reshape(-1,1,2)\n",
+    "    \n",
+    "#cv2.imwrite('flow.png', frame_with_flow)\n",
+    "save_flow_field(mask, 'flow_field.flo')\n",
+    "#############"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1318095507]\n",
+      "640\n",
+      "480\n",
+      "(640, 480, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to read the optical flow field from a .flo file\n",
+    "def read_flow_field(filename):\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
+    "        print(magic)\n",
+    "        if magic != 1318095507:\n",
+    "            raise ValueError(\"Invalid .flo file format!\")\n",
+    "\n",
+    "        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
+    "        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
+    "        print(width)\n",
+    "        print(height)\n",
+    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(width,height,3)\n",
+    "\n",
+    "        #non_zero_values = flow_data[np.nonzero(flow_data)]  # Extract non-zero values\n",
+    "        \n",
+    "        #print(non_zero_values)\n",
+    "        print(np.asarray(flow_data).shape)\n",
+    "    return flow_data\n",
+    "\n",
+    "# Example usage\n",
+    "flow_data = read_flow_field('flow_field.flo')  # Read the .flo file\n",
+    "\n",
+    "# Compute the magnitude and angle of the flow vectors\n",
+    "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
+    "\n",
+    "# Visualize the flow field\n",
+    "hue = angle * 180 / np.pi / 2\n",
+    "saturation = np.ones_like(magnitude)\n",
+    "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
+    "\n",
+    "# Display the flow visualization\n",
+    "cv2.imshow('Optical Flow', flow_visualization)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "prev_frame = frames[0]\n",
     "prev_gray = cv2.cvtColor(prev_frame, cv2.COLOR_BGR2GRAY)\n",
     "prev_corners = cv2.goodFeaturesToTrack(prev_gray, mask=None, **feature_params)\n",
@@ -279,7 +382,7 @@
     "\n",
     "output_file = 'Optical_flow.flo'\n",
     "write_flow(output_file,flow_array)\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -309,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
