--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "Ingest"
@@ -166,22 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "Flow"
     ]
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 21)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m<tokenize>:21\u001b[0;36m\u001b[0m\n\u001b[0;31m    return flow\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def write_flow(filename, flow):\n",
     "    height, width = flow.shape[:2]\n",
@@ -202,27 +193,7 @@
     "                data = np.fromfile(f, np.float32, count=2*w*h)\n",
     "                # Reshape data into 3D array (columns, rows, bands)\n",
     "                flow = np.resize(data, (h, w, 2))\n",
-    "\n",
-    "    return flow\n",
-    "\n",
-    "def compute_angular_error(flow_gt, flow_est):\n",
-    "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
-    "    angles_est = np.arctan2(flow_est[:, :, 1], flow_est[:, :, 0])\n",
-    "    error = (np.sum((angles_gt - angles_est) ** 2, axis=2))\n",
-    "    return np.mean(error)\n",
-    "\n",
-    "def compute_endpoint_error(flow_gt, flow_est):\n",
-    "    error = np.sqrt(np.sum((flow_gt - flow_est) ** 2, axis=2))\n",
-    "    return np.mean(error)\n",
-    "\n",
-    "def compare_flow_files(file_gt, file_est):\n",
-    "    flow_gt = read_flow(file_gt)\n",
-    "    flow_est = read_flow(file_est)\n",
-    "\n",
-    "    error_endpoint = compute_endpoint_error(flow_gt, flow_est)\n",
-    "    error_angular = compute_angular_error(flow_gt, flow_est)\n",
-    "\n",
-    "    return error_endpoint, error_angular"
+    "            return flow"
    ]
   },
   {
@@ -235,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +226,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "# ... (loading frames and setting parameters)\n",
+    "print(f\"Loading File 'config_LK.yml'\")\n",
+    "\n",
+    "config = load_config('config_LK.yml')\n",
+    "\n",
+    "input_path = config['input_path']\n",
+    "\n",
+    "frames = get_input_frames(input_path)\n",
+    "\n",
+    "feature_params = dict(\n",
+    "    maxCorners=config['max_corners'],\n",
+    "    qualityLevel=config['quality_level'],\n",
+    "    minDistance=config['min_distance'],\n",
+    "    blockSize=config['block_size']\n",
+    ")\n",
+    "lk_params = dict(\n",
+    "    winSize=(config['window_size'], config['window_size']),\n",
+    "    maxLevel=config['max_level'],\n",
+    "    criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, config['max_iterations'], config['epsilon'])\n",
+    ")\n",
+    "\n",
+    "# Create an empty array to store the flow vectors\n",
+    "flow_vectors = np.zeros((frames[0].shape[0], frames[0].shape[1], 2), dtype=np.float32)\n",
+    "\n",
+    "# Convert the first frame to grayscale\n",
+    "prev_gray = cv2.cvtColor(frames[0], cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "# Detect features in the first frame\n",
+    "prev_points = cv2.goodFeaturesToTrack(prev_gray, mask=None, **feature_params)\n",
+    "\n",
+    "for i in range(1, len(frames)):\n",
+    "    # Convert the current frame to grayscale\n",
+    "    curr_gray = cv2.cvtColor(frames[i], cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Calculate optical flow using Lucas-Kanade method\n",
+    "    curr_points, status, _ = cv2.calcOpticalFlowPyrLK(prev_gray, curr_gray, prev_points, None, **lk_params)\n",
+    "\n",
+    "    # Select good points\n",
+    "    good_new = curr_points[status == 1]\n",
+    "    good_old = prev_points[status == 1]\n",
+    "\n",
+    "    # Calculate flow vectors as displacement between points\n",
+    "    flow = good_new - good_old\n",
+    "\n",
+    "    # Calculate magnitude and angle of flow vectors\n",
+    "    magnitude, angle = cv2.cartToPolar(flow[..., 0], flow[..., 1], angleInDegrees=True)\n",
+    "\n",
+    "    # Set the flow vectors in the output array\n",
+    "    flow_vectors[:, :, 0] = cv2.resize(magnitude, (frames[0].shape[1], frames[0].shape[0]))\n",
+    "    flow_vectors[:, :, 1] = cv2.resize(angle, (frames[0].shape[1], frames[0].shape[0]))\n",
+    "\n",
+    "    # Accumulate flow vectors for all frames\n",
+    "    flow_vectors += flow_vectors\n",
+    "\n",
+    "    # Update previous frame and points for the next iteration\n",
+    "    prev_gray = curr_gray.copy()\n",
+    "    prev_points = good_new.reshape(-1, 1, 2)\n",
+    "\n",
+    "# Save the accumulated flow vectors as a .flo file\n",
+    "save_flow_field(flow_vectors, 'flow_vectors.flo')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[202021.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "def read_flow_field(filename):\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        magic = np.fromfile(f, np.float32, count=1)\n",
+    "        print(magic)\n",
+    "        if magic != 202021.25:\n",
+    "            raise ValueError('Invalid .flo file')\n",
+    "        width = np.fromfile(f, np.int32, count=1)[0]\n",
+    "        height = np.fromfile(f, np.int32, count=1)[0]\n",
+    "        data = np.fromfile(f, np.float32, count=2 * width * height)\n",
+    "        flow = np.resize(data, (height, width, 2))\n",
+    "    return flow\n",
+    "\n",
+    "def map_angle_to_rgb(angle):\n",
+    "    hue = angle / 2.0  # Scale angle to [0, 180] range for hue value\n",
+    "    hsv = np.ones((angle.shape[0], angle.shape[1], 3), dtype=np.float32)\n",
+    "    hsv[..., 0] = hue\n",
+    "    hsv[..., 1] = 1.0\n",
+    "    hsv[..., 2] = 1.0\n",
+    "    rgb = cv2.cvtColor(hsv, cv2.COLOR_HSV2BGR)\n",
+    "    return rgb\n",
+    "\n",
+    "# Read the flow field from .flo file\n",
+    "flow_field = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')\n",
+    "\n",
+    "# Extract magnitude and angle from flow field\n",
+    "magnitude = flow_field[..., 0]\n",
+    "angle = flow_field[..., 1]\n",
+    "\n",
+    "# Normalize magnitude to [0, 1] range\n",
+    "magnitude_normalized = cv2.normalize(magnitude, None, 0, 1, cv2.NORM_MINMAX)\n",
+    "\n",
+    "# Map angle to RGB color representation\n",
+    "angle_rgb = map_angle_to_rgb(angle)\n",
+    "\n",
+    "# Display the flow field\n",
+    "cv2.imshow('Magnitude', magnitude_normalized)\n",
+    "cv2.imshow('Angle', angle_rgb)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -263,11 +363,19 @@
      "output_type": "stream",
      "text": [
       "Loading File 'config_LK.yml'\n",
-      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame14.png']\n"
+      "{'input_path': 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2', 'max_corners': 100, 'quality_level': 0.3, 'min_distance': 7, 'block_size': 7, 'window_size': 15, 'max_level': 2, 'max_iterations': 10, 'epsilon': 0.03, 'ransac_threshold': 3.0}\n",
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame14.png']\n",
+      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Grove2\\\\frame14.png']\n"
      ]
     }
    ],
    "source": [
+    "# STABLE\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "\n",
+    "\n",
     "print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
     "config = load_config('config_LK.yml')\n",
@@ -318,24 +426,24 @@
     "    old_gray = frame_gray.copy()\n",
     "    p0 = good_new.reshape(-1,1,2)\n",
     "    \n",
-    "#cv2.imwrite('flow.png', frame_with_flow)\n",
+    "cv2.imwrite('flow.png', frame_with_flow)\n",
     "save_flow_field(mask, 'flow_field.flo')\n",
     "#############"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1318095507]\n",
+      "[1212500304]\n",
       "640\n",
       "480\n",
-      "(640, 480, 3)\n"
+      "(480, 640, 2)\n"
      ]
     }
    ],
@@ -345,14 +453,15 @@
     "    with open(filename, 'rb') as f:\n",
     "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
     "        print(magic)\n",
-    "        if magic != 1318095507:\n",
+    "        if magic != 1212500304:\n",
     "            raise ValueError(\"Invalid .flo file format!\")\n",
-    "\n",
+    "        #1318095507\n",
+    "        \n",
     "        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
     "        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
     "        print(width)\n",
     "        print(height)\n",
-    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(width,height,3)\n",
+    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(height,width,2)\n",
     "\n",
     "        #non_zero_values = flow_data[np.nonzero(flow_data)]  # Extract non-zero values\n",
     "        \n",
@@ -361,13 +470,14 @@
     "    return flow_data\n",
     "\n",
     "# Example usage\n",
-    "flow_data = read_flow_field('flow_field.flo')  # Read the .flo file\n",
+    "flow_data = read_flow_field('/Users/nmcna/Desktop/FEUP/4oano/2osemestre/VC/assignment2/dataset/other-gt-flow/Urban2/flow10.flo')  # Read the .flo file\n",
     "\n",
     "# Compute the magnitude and angle of the flow vectors\n",
     "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
     "\n",
     "# Visualize the flow field\n",
     "hue = angle * 180 / np.pi / 2\n",
+    "\n",
     "saturation = np.ones_like(magnitude)\n",
     "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
     "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
