--- a/assignment2/assignment2.ipynb
+++ b/assignment2/assignment2.ipynb
@@ -84,8 +84,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,23 +109,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Loads a yaml file with the parameters to run the code\n",
-    "def load_config(filename):\n",
-    "    with open(filename, 'r') as f:\n",
-    "        config = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "        config['input_path']= os.getcwd()+config['input_path']\n",
-    "        print(config)\n",
-    "    return config"
+    "## Ingest "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "Ingest"
@@ -165,30 +166,59 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Algo Config from file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loads a yaml file with the parameters to run the code\n",
+    "def load_config(filename):\n",
+    "    with open(filename, 'r') as f:\n",
+    "        config = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "        config['input_path']= os.getcwd()+config['input_path']\n",
+    "        print(config)\n",
+    "    return config"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flo file format Aux Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "Flow"
     ]
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 21)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m<tokenize>:21\u001b[0;36m\u001b[0m\n\u001b[0;31m    return flow\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def write_flow(filename, flow):\n",
-    "    height, width = flow.shape[:2]\n",
+    "import struct\n",
+    "\n",
+    "def write_flow(flow, filename):\n",
+    "    height, width, _ = flow.shape\n",
     "    with open(filename, 'wb') as f:\n",
-    "        f.write(struct.pack('f', width))\n",
-    "        f.write(struct.pack('f', height))\n",
+    "        # Write the .flo file header\n",
+    "        f.write(struct.pack('f', 1212500304.0))  # Magic number\n",
+    "        f.write(struct.pack('i', width))  # Image width\n",
+    "        f.write(struct.pack('i', height))  # Image height\n",
+    "\n",
+    "        # Write the flow vectors\n",
     "        f.write(flow.astype(np.float32).tobytes())\n",
+    "\n",
     "  \n",
     "def read_flow(filename):\n",
     "     with open(filename, 'rb') as f:\n",
@@ -202,8 +232,7 @@
     "                data = np.fromfile(f, np.float32, count=2*w*h)\n",
     "                # Reshape data into 3D array (columns, rows, bands)\n",
     "                flow = np.resize(data, (h, w, 2))\n",
-    "\n",
-    "    return flow\n",
+    "            return flow\n",
     "\n",
     "def compute_angular_error(flow_gt, flow_est):\n",
     "    angles_gt = np.arctan2(flow_gt[:, :, 1], flow_gt[:, :, 0])\n",
@@ -235,38 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import struct\n",
-    "\n",
-    "def save_flow_field(flow, filename):\n",
-    "    height, width, _ = flow.shape\n",
-    "    with open(filename, 'wb') as f:\n",
-    "        # Write the .flo file header\n",
-    "        f.write(struct.pack('f', 1212500304.0))  # Magic number\n",
-    "        f.write(struct.pack('i', width))  # Image width\n",
-    "        f.write(struct.pack('i', height))  # Image height\n",
-    "\n",
-    "        # Write the flow vectors\n",
-    "        f.write(flow.astype(np.float32).tobytes())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading File 'config_LK.yml'\n",
-      "['c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame07.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame08.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame09.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame10.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame11.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame12.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame13.png', 'c:\\\\Users\\\\nmcna\\\\Desktop\\\\FEUP\\\\4oano\\\\2osemestre\\\\VC\\\\assignment2\\\\dataset\\\\other-data\\\\Beanbags\\\\frame14.png']\n"
-     ]
-    }
-   ],
    "source": [
     "print(f\"Loading File \\'config_LK.yml\\'\")\n",
     "\n",
@@ -321,61 +321,6 @@
     "#cv2.imwrite('flow.png', frame_with_flow)\n",
     "save_flow_field(mask, 'flow_field.flo')\n",
     "#############"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1318095507]\n",
-      "640\n",
-      "480\n",
-      "(640, 480, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Function to read the optical flow field from a .flo file\n",
-    "def read_flow_field(filename):\n",
-    "    with open(filename, 'rb') as f:\n",
-    "        magic = np.frombuffer(f.read(4), dtype=np.uint8).view(np.int32)\n",
-    "        print(magic)\n",
-    "        if magic != 1318095507:\n",
-    "            raise ValueError(\"Invalid .flo file format!\")\n",
-    "\n",
-    "        width = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
-    "        height = np.frombuffer(f.read(4), dtype=np.int32)[0]\n",
-    "        print(width)\n",
-    "        print(height)\n",
-    "        flow_data = np.frombuffer(f.read(), dtype=np.float32).reshape(width,height,3)\n",
-    "\n",
-    "        #non_zero_values = flow_data[np.nonzero(flow_data)]  # Extract non-zero values\n",
-    "        \n",
-    "        #print(non_zero_values)\n",
-    "        print(np.asarray(flow_data).shape)\n",
-    "    return flow_data\n",
-    "\n",
-    "# Example usage\n",
-    "flow_data = read_flow_field('flow_field.flo')  # Read the .flo file\n",
-    "\n",
-    "# Compute the magnitude and angle of the flow vectors\n",
-    "magnitude, angle = cv2.cartToPolar(flow_data[..., 0], flow_data[..., 1])\n",
-    "\n",
-    "# Visualize the flow field\n",
-    "hue = angle * 180 / np.pi / 2\n",
-    "saturation = np.ones_like(magnitude)\n",
-    "value = cv2.normalize(magnitude, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "flow_visualization = cv2.cvtColor(cv2.merge((hue, saturation, value)).astype(np.uint8), cv2.COLOR_HSV2BGR)\n",
-    "\n",
-    "# Display the flow visualization\n",
-    "cv2.imshow('Optical Flow', flow_visualization)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n"
    ]
   },
   {
@@ -538,174 +483,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading 420 x 380 flo file\n",
-      "[[[ 5.875  0.   ]\n",
-      "  [ 5.875  0.   ]\n",
-      "  [ 5.875  0.   ]\n",
-      "  ...\n",
-      "  [ 3.75   0.   ]\n",
-      "  [ 3.75   0.   ]\n",
-      "  [ 3.75   0.   ]]\n",
-      "\n",
-      " [[ 3.625  0.   ]\n",
-      "  [ 3.625  0.   ]\n",
-      "  [ 3.625  0.   ]\n",
-      "  ...\n",
-      "  [ 4.     0.   ]\n",
-      "  [ 4.     0.   ]\n",
-      "  [ 4.     0.   ]]\n",
-      "\n",
-      " [[ 4.     0.   ]\n",
-      "  [ 4.     0.   ]\n",
-      "  [ 4.     0.   ]\n",
-      "  ...\n",
-      "  [ 4.375  0.   ]\n",
-      "  [ 4.375  0.   ]\n",
-      "  [ 4.375  0.   ]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[-6.75   0.   ]\n",
-      "  [-6.75   0.   ]\n",
-      "  [-6.625  0.   ]\n",
-      "  ...\n",
-      "  [-7.625  0.   ]\n",
-      "  [-7.625  0.   ]\n",
-      "  [-7.625  0.   ]]\n",
-      "\n",
-      " [[-7.625  0.   ]\n",
-      "  [-7.625  0.   ]\n",
-      "  [-7.625  0.   ]\n",
-      "  ...\n",
-      "  [-8.625  0.   ]\n",
-      "  [-8.5    0.   ]\n",
-      "  [-8.5    0.   ]]\n",
-      "\n",
-      " [[-8.5    0.   ]\n",
-      "  [-8.5    0.   ]\n",
-      "  [-8.5    0.   ]\n",
-      "  ...\n",
-      "  [-2.125  0.   ]\n",
-      "  [-2.125  0.   ]\n",
-      "  [-2.25   0.   ]]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (420,380) into shape (380,420)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 38\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[39m# Example usage\u001b[39;00m\n\u001b[1;32m     37\u001b[0m flow_file \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/workspace/VC/assignment2/dataset/other-gt-flow/Venus/flow10.flo\u001b[39m\u001b[39m'\u001b[39m  \u001b[39m# Path to the .flo file\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m visualize_flow(flow_file)\n",
-      "Cell \u001b[0;32mIn[23], line 24\u001b[0m, in \u001b[0;36mvisualize_flow\u001b[0;34m(flow_file)\u001b[0m\n\u001b[1;32m     21\u001b[0m hsv[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m255\u001b[39m\n\u001b[1;32m     23\u001b[0m magnitude, angle \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcartToPolar(data2D[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39m0\u001b[39m], data2D[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39m1\u001b[39m])\n\u001b[0;32m---> 24\u001b[0m hsv [\u001b[39m.\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m.\u001b[39;49m, \u001b[39m0\u001b[39;49m] \u001b[39m=\u001b[39m angle \u001b[39m*\u001b[39m \u001b[39m180\u001b[39m \u001b[39m/\u001b[39m np\u001b[39m.\u001b[39mpi \u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m     25\u001b[0m hsv[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, \u001b[39m2\u001b[39m] \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mnormalize(magnitude, \u001b[39mNone\u001b[39;00m, \u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m, cv2\u001b[39m.\u001b[39mNORM_MINMAX)\n\u001b[1;32m     27\u001b[0m bgr \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(hsv, cv2\u001b[39m.\u001b[39mCOLOR_HSV2BGR)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (420,380) into shape (380,420)"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def visualize_flow(flow_file):\n",
-    "    # Read the .flo file\n",
-    "    with open(flow_file, 'rb') as f:\n",
-    "        # Read the magic number\n",
-    "        magic = np.fromfile(f, np.float32, count=1)\n",
-    "        if magic != 202021.25:\n",
-    "            raise ValueError(\"Invalid .flo file format!\")\n",
-    "\n",
-    "        # Read the header (width and height)\n",
-    "        width = np.fromfile(f, np.int32, count=1)[0]\n",
-    "        height = np.fromfile(f, np.int32, count=1)[0]\n",
-    "\n",
-    "        # Read the flow data\n",
-    "        flow = np.fromfile(f, np.float32, count=2 * width * height).reshape((height, width, 2))\n",
-    "\n",
-    "    # Compute the magnitude and angle of the flow vectors\n",
-    "    magnitude = np.sqrt(flow[..., 0] ** 2 + flow[..., 1] ** 2)\n",
-    "    angle = np.arctan2(flow[..., 1], flow[..., 0])\n",
-    "\n",
-    "    # Normalize the magnitude for visualization\n",
-    "    magnitude_normalized = (magnitude - magnitude.min()) / (magnitude.max() - magnitude.min())\n",
-    "\n",
-    "    # Create the RGB visualization\n",
-    "    hsv = np.zeros((width, height, 3))\n",
-    "    hsv[..., 0] = (angle + np.pi) / (2 * np.pi)\n",
-    "    hsv[..., 1] = 1\n",
-    "    hsv[..., 2] = magnitude_normalized\n",
-    "    rgb = plt.cm.hsv(hsv)\n",
-    "\n",
-    "    # Plot the flow visualization\n",
-    "    plt.imshow(rgb)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Example usage\n",
-    "flow_file = '/workspace/VC/assignment2/dataset/other-gt-flow/Venus/flow10.flo'  # Path to the .flo file\n",
-    "visualize_flow(flow_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 319201 into shape (0,202021,2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 29\u001b[0m\n\u001b[1;32m     25\u001b[0m     flow[unknown_mask, :] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m     27\u001b[0m     \u001b[39mreturn\u001b[39;00m (\u001b[39m255\u001b[39m \u001b[39m*\u001b[39m flow)\u001b[39m.\u001b[39mastype(np\u001b[39m.\u001b[39muint8)\n\u001b[0;32m---> 29\u001b[0m flow_image \u001b[39m=\u001b[39m flow_to_color(read_flow(\u001b[39m\"\u001b[39;49m\u001b[39m/workspace/VC/assignment2/dataset/other-gt-flow/Venus/flow10.flo\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m     30\u001b[0m display_image(flow_image)\n",
-      "Cell \u001b[0;32mIn[6], line 15\u001b[0m, in \u001b[0;36mread_flow\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     12\u001b[0m     flow_bytes \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39mread()\n\u001b[1;32m     14\u001b[0m flow \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mfrombuffer(flow_bytes, np\u001b[39m.\u001b[39mfloat32)\n\u001b[0;32m---> 15\u001b[0m flow \u001b[39m=\u001b[39m flow\u001b[39m.\u001b[39;49mreshape(\u001b[39mint\u001b[39;49m(height), \u001b[39mint\u001b[39;49m(width), \u001b[39m2\u001b[39;49m)\n\u001b[1;32m     17\u001b[0m \u001b[39mreturn\u001b[39;00m flow\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 319201 into shape (0,202021,2)"
-     ]
-    }
-   ],
-   "source": [
-    "def display_image(image):\n",
-    "    # Convert the OpenCV image to a PIL image\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    pil_image = PIL.Image.fromarray(image)\n",
-    "    \n",
-    "    # Display the image using the Jupyter inline magic\n",
-    "    buffered = BytesIO()\n",
-    "    pil_image.save(buffered, format=\"JPEG\")\n",
-    "    display(Image(data=buffered.getvalue()))\n",
-    "\n",
-    "def flow_to_color(flow, max_flow=None):\n",
-    "    \"\"\"\n",
-    "    Convert optical flow to RGB image using the Middlebury color code.\n",
-    "    \"\"\"\n",
-    "    assert flow.ndim == 3 and flow.shape[2] == 2, \"input flow must have shape (H, W, 2)\"\n",
-    "    if max_flow is None:\n",
-    "        max_flow = np.max(np.abs(flow))\n",
-    "    \n",
-    "    eps = 1e-5\n",
-    "    unknown_mask = np.logical_or(np.isnan(flow[..., 0]), np.isnan(flow[..., 1]))\n",
-    "    flow = flow / (max_flow + eps)\n",
-    "    flow[..., 0] = 0.5 + flow[..., 0] / 2\n",
-    "    flow[..., 1] = 0.5 - flow[..., 1] / 2\n",
-    "    flow[..., 1] *= -1\n",
-    "    flow[unknown_mask, :] = 0\n",
-    "    \n",
-    "    return (255 * flow).astype(np.uint8)\n",
-    "\n",
-    "flow_image = flow_to_color(read_flow(\"/workspace/VC/assignment2/dataset/other-gt-flow/Venus/flow10.flo\"))\n",
-    "display_image(flow_image)\n"
+    "# Bench Marking\n"
    ]
   },
   {
@@ -713,15 +495,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bench Marking\n",
-    "\n",
     "## Import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "Dataset"
+    ]
+   },
    "outputs": [],
    "source": [
     "# IMport dataset with public ground truth\n",
